fix(hiclaw): update HiClaw content to match actual product
- Replace HiMarket-copied content with real HiClaw (Agent Teams system) content
- Update product page: Agent Teams, Human-in-the-Loop, AI Gateway, MCP Integration
- Update i18n translations (zh-cn and en) for HiClaw features
- Update documentation with correct product introduction and deployment guide
- Add hiclawGithub link to constant.ts

HiClaw is an open-source Agent Teams system with IM-based multi-Agent collaboration,
not an AI marketplace like HiMarket.